--- a/Arithmetic/Excersise4/Excersise4.csproj
+++ b/Arithmetic/Excersise4/Excersise4.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0DD8CC00-E7C7-439F-81EA-D4CF4DCCA4A3}</ProjectGuid>
+    <ProjectGuid>{74D29FA5-F832-4527-A44C-6B89A673D67E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SumAverageRunningInt</RootNamespace>
-    <AssemblyName>SumAverageRunningInt</AssemblyName>
+    <RootNamespace>Excersise4</RootNamespace>
+    <AssemblyName>Excersise4</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
