--- a/Arithmetic/Excersise6/Excersise6.csproj
+++ b/Arithmetic/Excersise6/Excersise6.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0DD8CC00-E7C7-439F-81EA-D4CF4DCCA4A3}</ProjectGuid>
+    <ProjectGuid>{9802C47B-B569-47CA-9C07-5C521C2AAD4C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SumAverageRunningInt</RootNamespace>
-    <AssemblyName>SumAverageRunningInt</AssemblyName>
+    <RootNamespace>Excersise6</RootNamespace>
+    <AssemblyName>Excersise6</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
